--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "@tailwindcss/vite": "^4.0.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^11.2.4",
     "tailwindcss": "^4.0.9"
   },
   "devDependencies": {
