--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "axios": "^1.8.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
     "react-slick": "^0.30.3",
+    "sass": "^1.85.1",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.2.4",
-    "sass": "^1.85.1",
     "tailwindcss": "^4.0.9"
   },
   "devDependencies": {
