--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-toastify": "^11.0.5",
     "sass": "^1.85.1",
     "slick-carousel": "^1.8.1",
+    "slugify": "^1.6.6",
     "swiper": "^11.2.4",
     "tailwindcss": "^4.0.9"
   },
@@ -38,13 +39,13 @@
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
+    "concurrently": "^8.2.0",
     "eslint": "^9.19.0",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
-    "vite": "^6.1.0",
-    "concurrently": "^8.2.0",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "vite": "^6.1.0"
   }
 }
