--- a/package.json
+++ b/package.json
@@ -41,15 +41,12 @@
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
     "concurrently": "^8.2.0",
-    "concurrently": "^8.2.0",
     "eslint": "^9.19.0",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
-    "nodemon": "^3.0.1",
     "vite": "^6.1.0",
-    "nodemon": "^3.0.1",
-    "vite": "^6.1.0"
+    "nodemon": "^3.0.1"
   }
 }
