--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lucide-react": "^0.483.0",
     "mongoose": "^8.12.1",
     "react": "^19.0.0",
+    "react-apexcharts": "^1.7.0",
     "react-dom": "^19.0.0",
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.5.0",
