--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "framer-motion": "^12.9.2",
+    "gsap": "^3.12.7",
     "lucide-react": "^0.483.0",
     "mongoose": "^8.12.1",
     "react": "^19.0.0",
