--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "start": "node server/server.js"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.0",
+    "@mui/icons-material": "^7.0.2",
+    "@mui/material": "^7.0.2",
     "@reduxjs/toolkit": "^2.6.1",
     "@tailwindcss/vite": "^4.0.9",
     "antd": "^5.24.4",
@@ -26,6 +29,7 @@
     "mongoose": "^8.12.1",
     "react": "^19.0.0",
     "react-apexcharts": "^1.7.0",
+    "react-chatbot-kit": "^2.2.2",
     "react-dom": "^19.0.0",
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.5.0",
